force-app/main/default/objects/Incentive_Plan_Template__c/Incentive_Plan_Template__c.object-meta.xml
<CustomObject>
    <description>Blueprint for an incentive/commission plan. Defines rate structure, triggers, eligibility, caps, holds, and clawback rules.</description>
    <label>Incentive Plan Template</label>
    <nameField>
        <label>Incentive Plan Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentive Plan Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>