force-app/main/default/objects/Incentive_Plan_Template__c/fields/Acceptance_Gate__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Gate__c</fullName>
    <description>Controls whether plan acceptance is required before commissions accrue.</description>
    <label>Acceptance Gate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hard</fullName>
            </value>
            <value>
                <fullName>Soft</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>