force-app/main/default/objects/Incentive_Plan_Template__c/fields/Attainment_Metric__c.field-meta.xml
<CustomField>
    <fullName>Attainment_Metric__c</fullName>
    <description>Which attainment metric drives tier progression.</description>
    <label>Attainment Metric</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>