force-app/main/default/objects/Incentive_Plan_Template__c/fields/Attainment_Period__c.field-meta.xml
<CustomField>
    <fullName>Attainment_Period__c</fullName>
    <description>The period over which quota attainment is measured.</description>
    <label>Attainment Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi_Annual</fullName>
                <label>Semi-Annual</label>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>