force-app/main/default/objects/Incentive_Plan_Template__c/fields/Calculation_Template__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Template__c</fullName>
    <description>The calculation template used for commission computation under this plan.</description>
    <label>Calculation Template</label>
    <type>Lookup</type>
    <referenceTo>Calculation_Template__c</referenceTo>
    <relationshipLabel>Plan Templates Using This</relationshipLabel>
    <relationshipName>Plan_Templates</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>