force-app/main/default/objects/Incentive_Plan_Template__c/fields/Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From__c</fullName>
    <description>The original template this was cloned from.</description>
    <label>Cloned From</label>
    <type>Lookup</type>
    <referenceTo>Incentive_Plan_Template__c</referenceTo>
    <relationshipLabel>Cloned Templates</relationshipLabel>
    <relationshipName>Cloned_Templates</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>