force-app/main/default/objects/Incentive_Plan_Template__c/fields/Commissionable_Value_Override__c.field-meta.xml
<CustomField>
    <fullName>Commissionable_Value_Override__c</fullName>
    <description>Overrides the default commissionable value from Transaction Category. Null means use Transaction Category default.</description>
    <label>Commissionable Value Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full_Amount</fullName>
                <label>Full Amount</label>
            </value>
            <value>
                <fullName>Net_Amount</fullName>
                <label>Net Amount</label>
            </value>
            <value>
                <fullName>Gross_Margin</fullName>
                <label>Gross Margin</label>
            </value>
            <value>
                <fullName>Custom_Formula</fullName>
                <label>Custom Formula</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>