force-app/main/default/objects/Incentive_Plan_Template__c/fields/Deferred_Payment__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Payment__c</fullName>
    <description>Indicates whether commission payments are deferred per a vesting schedule.</description>
    <label>Deferred Payment</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>