force-app/main/default/objects/Incentive_Plan_Template__c/fields/Dependent_Template__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Template__c</fullName>
    <description>Another plan template that must reach a threshold before this plan pays out.</description>
    <label>Dependent Template</label>
    <type>Lookup</type>
    <referenceTo>Incentive_Plan_Template__c</referenceTo>
    <relationshipLabel>Dependent Templates</relationshipLabel>
    <relationshipName>Dependent_Templates</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>