force-app/main/default/objects/Incentive_Plan_Template__c/fields/Dependent_Threshold_Pct__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Threshold_Pct__c</fullName>
    <description>Attainment percentage the dependent template must reach before this plan activates.</description>
    <label>Dependent Threshold Pct</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>