force-app/main/default/objects/Incentive_Plan_Template__c/fields/Effective_End__c.field-meta.xml
<CustomField>
    <fullName>Effective_End__c</fullName>
    <description>Date when this plan template expires.</description>
    <label>Effective End</label>
    <type>Date</type>
</CustomField>