force-app/main/default/objects/Incentive_Plan_Template__c/fields/Effective_Start__c.field-meta.xml
<CustomField>
    <fullName>Effective_Start__c</fullName>
    <description>Date when this plan template becomes effective.</description>
    <label>Effective Start</label>
    <type>Date</type>
</CustomField>