force-app/main/default/objects/Incentive_Plan_Template__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>The industry vertical this plan template is designed for.</description>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SaaS</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Financial_Services</fullName>
                <label>Financial Services</label>
            </value>
            <value>
                <fullName>Real_Estate</fullName>
                <label>Real Estate</label>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Telecommunications</fullName>
            </value>
            <value>
                <fullName>Healthcare_IT</fullName>
                <label>Healthcare IT</label>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>