force-app/main/default/objects/Incentive_Plan_Template__c/fields/Is_Evergreen__c.field-meta.xml
<CustomField>
    <fullName>Is_Evergreen__c</fullName>
    <description>Indicates whether this plan automatically renews without an end date.</description>
    <label>Is Evergreen</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>