force-app/main/default/objects/Incentive_Plan_Template__c/fields/Is_Library_Template__c.field-meta.xml
<CustomField>
    <fullName>Is_Library_Template__c</fullName>
    <description>Indicates whether this template is a reusable library template.</description>
    <label>Is Library Template</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>