force-app/main/default/objects/Incentive_Plan_Template__c/fields/Is_Recurring__c.field-meta.xml
<CustomField>
    <fullName>Is_Recurring__c</fullName>
    <description>Indicates whether this plan pays recurring trail commissions.</description>
    <label>Is Recurring</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>