force-app/main/default/objects/Incentive_Plan_Template__c/fields/Is_Retroactive__c.field-meta.xml
<CustomField>
    <fullName>Is_Retroactive__c</fullName>
    <description>Indicates whether tier attainment triggers retroactive recalculation of earlier transactions.</description>
    <label>Is Retroactive</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>