force-app/main/default/objects/Incentive_Plan_Template__c/fields/Is_SPIFF__c.field-meta.xml
<CustomField>
    <fullName>Is_SPIFF__c</fullName>
    <description>Indicates whether this template represents a SPIFF incentive.</description>
    <label>Is SPIFF</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>