force-app/main/default/objects/Incentive_Plan_Template__c/fields/Min_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Min_Term_Months__c</fullName>
    <description>Minimum contract term in months required for commission eligibility.</description>
    <label>Min Term Months</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>