force-app/main/default/objects/Incentive_Plan_Template__c/fields/Multi_Period_Bonus_Rate__c.field-meta.xml
<CustomField>
    <fullName>Multi_Period_Bonus_Rate__c</fullName>
    <description>Bonus rate applied for sustained multi-period attainment.</description>
    <label>Multi Period Bonus Rate</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>