force-app/main/default/objects/Incentive_Plan_Template__c/fields/Multi_Period_Cap__c.field-meta.xml
<CustomField>
    <fullName>Multi_Period_Cap__c</fullName>
    <description>Maximum cumulative multi-period bonus amount.</description>
    <label>Multi Period Cap</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>