force-app/main/default/objects/Incentive_Plan_Template__c/fields/Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Frequency__c</fullName>
    <description>How often commission payments are issued under this plan.</description>
    <label>Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi_Weekly</fullName>
                <label>Bi-Weekly</label>
            </value>
            <value>
                <fullName>Semi_Monthly</fullName>
                <label>Semi-Monthly</label>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>