force-app/main/default/objects/Incentive_Plan_Template__c/fields/Penalty_Pct__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Pct__c</fullName>
    <description>Penalty percentage applied for under-performance or policy violations.</description>
    <label>Penalty Pct</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>