force-app/main/default/objects/Incentive_Plan_Template__c/fields/Plan_Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Plan_Document_URL__c</fullName>
    <description>URL to the official plan document.</description>
    <label>Plan Document URL</label>
    <type>Url</type>
</CustomField>