force-app/main/default/objects/Incentive_Plan_Template__c/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <description>The commission plan type defining the rate structure.</description>
    <label>Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Tiered</fullName>
            </value>
            <value>
                <fullName>Accelerated</fullName>
            </value>
            <value>
                <fullName>Gross_Margin</fullName>
                <label>Gross Margin</label>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
            <value>
                <fullName>Activity_Based</fullName>
                <label>Activity Based</label>
            </value>
            <value>
                <fullName>Team_Pool</fullName>
                <label>Team Pool</label>
            </value>
            <value>
                <fullName>Team_Override</fullName>
                <label>Team Override</label>
            </value>
            <value>
                <fullName>SPIFF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>