force-app/main/default/objects/Incentive_Plan_Template__c/fields/Plan_Year__c.field-meta.xml
<CustomField>
    <fullName>Plan_Year__c</fullName>
    <description>The plan year this template belongs to.</description>
    <label>Plan Year</label>
    <type>Lookup</type>
    <referenceTo>Plan_Year__c</referenceTo>
    <relationshipLabel>Plan Templates</relationshipLabel>
    <relationshipName>Plan_Templates</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>