force-app/main/default/objects/Incentive_Plan_Template__c/fields/Recurring_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Cadence__c</fullName>
    <description>How often recurring trail commissions are paid.</description>
    <label>Recurring Cadence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>