force-app/main/default/objects/Incentive_Plan_Template__c/fields/Recurring_Duration_Months__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Duration_Months__c</fullName>
    <description>Number of months recurring trail commissions are paid.</description>
    <label>Recurring Duration Months</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>