force-app/main/default/objects/Incentive_Plan_Template__c/fields/Recurring_Rate_Pct__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Rate_Pct__c</fullName>
    <description>Commission rate for recurring/trail payments.</description>
    <label>Recurring Rate Pct</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>