force-app/main/default/objects/Incentive_Plan_Template__c/fields/SPIFF_Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>SPIFF_Approval_Type__c</fullName>
    <description>Approval workflow type for SPIFF payouts.</description>
    <label>SPIFF Approval Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fast_Track</fullName>
                <label>Fast Track</label>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>