force-app/main/default/objects/Incentive_Plan_Template__c/fields/SPIFF_Bonus_Amount__c.field-meta.xml
<CustomField>
    <fullName>SPIFF_Bonus_Amount__c</fullName>
    <description>Fixed bonus amount paid per qualifying SPIFF transaction.</description>
    <label>SPIFF Bonus Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>