force-app/main/default/objects/Incentive_Plan_Template__c/fields/SPIFF_Budget__c.field-meta.xml
<CustomField>
    <fullName>SPIFF_Budget__c</fullName>
    <description>Total budget allocated for this SPIFF program.</description>
    <label>SPIFF Budget</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>