force-app/main/default/objects/Incentive_Plan_Template__c/fields/SPIFF_Budget_Used__c.field-meta.xml
<CustomField>
    <fullName>SPIFF_Budget_Used__c</fullName>
    <description>Amount of SPIFF budget consumed to date.</description>
    <label>SPIFF Budget Used</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>