force-app/main/default/objects/Incentive_Plan_Template__c/fields/SPIFF_Stacking__c.field-meta.xml
<CustomField>
    <fullName>SPIFF_Stacking__c</fullName>
    <description>Defines how this SPIFF interacts with the base commission plan.</description>
    <label>SPIFF Stacking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additive</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Bonus_Only</fullName>
                <label>Bonus Only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>