force-app/main/default/objects/Incentive_Plan_Template__c/fields/Trigger_Type__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Type__c</fullName>
    <description>The event that triggers commission calculation.</description>
    <label>Trigger Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booking</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
            <value>
                <fullName>Revenue_Recognition</fullName>
                <label>Revenue Recognition</label>
            </value>
            <value>
                <fullName>Renewal_Date</fullName>
                <label>Renewal Date</label>
            </value>
            <value>
                <fullName>Activity</fullName>
            </value>
            <value>
                <fullName>Monthly_Recurring</fullName>
                <label>Monthly Recurring</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>