force-app/main/default/objects/Incentive_Plan_Template__c/fields/Vesting_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Vesting_Schedule__c</fullName>
    <description>JSON vesting installments defining the deferred payment schedule.</description>
    <label>Vesting Schedule</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>